# torch-tensorcore-speedkit

./: CHANGELOG.md  INTEGRATION_GUIDE.md  LICENSE  README.md  RELEASE.md  USAGE_GUIDE.md  pyproject.toml  requirements.txt
examples/: benchmark_compare.py  train_cifar10_resnet.py  train_toy_transformer.py
examples/configs/: auto_speed.yaml  speed.yaml  speed_cpu.yaml
tests/: test_auto.py  test_auto_std.py  test_config.py  test_trainer_smoke.py
torch_speedkit/: __init__.py  attention.py  auto_config.py  bench.py  config.py  device.py  logging.py  optim.py  report.py  speed.py  trainer.py  utils.py
torch_speedkit/__pycache__/: auto_config.cpython-310.pyc.2106786453888  report.cpython-310.pyc.1370311744880  report.cpython-310.pyc.1782378126704  report.cpython-310.pyc.2269772045680
torch_tensorcore_speedkit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
